Fix code wrapping

--- a/assets/typography.pcss
+++ b/assets/typography.pcss
@@ -123,7 +123,6 @@ p code {
   padding: 3px 2px;
   margin: 0 8px;
   border: 1px solid hsla(255, 0%, 50%, 0.2);
-  white-space: nowrap;
   font-size: 16px;
 }
 
